--- a/Space-Station-Website/css/animations.css
+++ b/Space-Station-Website/css/animations.css
@@ -11,12 +11,12 @@ nav ul li {
     animation: shake 2s ease infinite;
 }
 
+@keyframes glowing {
+    0% { opacity: 0.5; }
+    50% { opacity: 1; }
+    100% { opacity: 0.5; }
+}
 
-@keyframes fadeIn {
-    from {
-        opacity: 0; 
-    }
-    to {
-        opacity: 1; 
-    }
+.glowing {
+    animation: glowing 2s ease infinite alternate;
 }
