--- a/Space-Station-Website/css/shared.css
+++ b/Space-Station-Website/css/shared.css
@@ -27,6 +27,23 @@ header h1 {
     margin: 0;
 }
 
+.cosmos-section {
+    background-color: #111; /* Dark background color */
+    color: #fff; /* Text color */
+    padding: 50px; /* Padding */
+    text-align: center; /* Center-align content */
+}
+
+.cosmos-section h2 {
+    font-size: 2rem; /* Heading font size */
+    margin-bottom: 20px; /* Bottom margin */
+}
+
+.cosmos-text {
+    font-size: 1.2rem; /* Text font size */
+    line-height: 1.6; /* Line height for readability */
+}
+
 .hero {
     position: relative;
     height: 60vh;
@@ -70,7 +87,7 @@ header h1 {
 .fade-section {
     width: 80%;
     margin: 0 auto;
-    border: 2px solid white; 
+    border: 4px solid black; 
     padding: 30px; 
 }
 
@@ -121,6 +138,7 @@ section {
 h2 {
     font-size: 1.5rem;
     margin-bottom: 30px;
+    text-transform: uppercase;
 }
 
 .gallery {
@@ -182,6 +200,7 @@ h2 {
 .reservations h2 {
     font-size: 2rem; 
     margin-bottom: 20px; 
+    padding-top: 50px;
 }
 
 .reservations p {
